--- a/escom-bpm-web/src/main/webapp/view/common/work-time.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/work-time.xhtml
@@ -1,19 +1,30 @@
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
                  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                  xmlns:p="http://primefaces.org/ui"
-                 xmlns:f="http://xmlns.jcp.org/jsf/core"      >
+                 xmlns:f="http://xmlns.jcp.org/jsf/core"      
+                 xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <p:panelGrid id="pnWorkTime" columns="2" layout="grid" columnClasses="ui-grid-col-4, ui-grid-col-8" styleClass="ui-grid-col-12 without-spaces" >
         <p:outputLabel value="#{bundle.DurationWorkingDay}:" indicateRequired="true"/>
-        <p:spinner value="#{_bean.editedItem.workTime}" min="1" max="24" 
-                   suffix="#{bundle.HourShort}" size="2"
-                   onchange="return itemChange = 1;"
-                   disabled="#{_bean.readOnly or _readOnly}"
-                   required="#{param['isRequired'] == 'true'}"
-                   requiredMessage="#{bundle.Field} [#{bundle.DurationWorkingDay}] #{bundle.MustBeFilled}">
-            <p:ajax event="change" update="calEndTime"/>
-        </p:spinner>
-
+        <h:panelGrid columns="2">
+            <p:spinner value="#{_bean.editedItem.workTimeHour}" min="1" max="24" 
+                       suffix="#{bundle.HourShort}" size="2"
+                       onchange="return itemChange = 1;"
+                       disabled="#{_bean.readOnly or _readOnly}"
+                       required="#{param['isRequired'] == 'true'}"
+                       requiredMessage="#{bundle.Field} [#{bundle.DurationWorkingDay}] #{bundle.MustBeFilled}">
+                <p:ajax event="change" update="calEndTime"/>
+            </p:spinner>
+            <p:spinner value="#{_bean.editedItem.workTimeMinute}" min="0" max="60" 
+                       suffix="#{bundle.Minute}" size="3"
+                       onchange="return itemChange = 1;"
+                       disabled="#{_bean.readOnly or _readOnly}"
+                       required="#{param['isRequired'] == 'true'}"
+                       requiredMessage="#{bundle.Field} [#{bundle.DurationWorkingDay}] #{bundle.MustBeFilled}">
+                <p:ajax event="change" update="calEndTime"/>
+            </p:spinner>
+        </h:panelGrid>
+        
         <p:outputLabel value="#{bundle.BeginWorkingDay}:" indicateRequired="true"/>                
         <p:calendar value="#{_bean.beginTime}" pattern="HH:mm" timeOnly="true" 
                     locale="#{sessionBean.locale}" timeZone="#{TimeZone.getTimeZone('UTC')}"
