--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -117,7 +117,7 @@
                                 <p:graphicImage value="/resources/icon/table_active-32.png"/>
                                 <p:link href="#{sessionBean.onGetFormURL('/admin/users/'.concat(DictFrmName.FRM_USER_SESSIONS))}" value="#{bundle.Sessions}" target="_blank" />
                                 
-                                <p:graphicImage value="/resources/icon/timer-32.png" rendered="#{applicationBean.isCanUsesTasks()}"/>                                 
+                                <p:graphicImage value="/resources/icon/timer-32.png"/>                                 
                                 <p:link href="#{sessionBean.onGetFormURL('/admin/worktime/'.concat(DictFrmName.FRM_CALENDAR))}" 
                                         rendered="#{applicationBean.isCanUsesTasks()}"
                                         value="#{bundle.WorkTime}" target="_blank" />
