доработка удаления папки, доработка формирования и вывод штрих-кода

--- a/escom-bpm-web/src/main/webapp/view/common/dict-info.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-info.xhtml
@@ -7,64 +7,77 @@
     <p:tab title="#{bundle.Info}" rendered="#{!_bean.simpleCard()}">        
         <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces" > 
             <p:accordionPanel id="infoAcc">
-                <p:tab title="#{bundle.Object}">  
-                    <h:panelGrid columns="2" styleClass="without-spaces" > 
-                        <p:outputLabel value="#{bundle.State}:"/>
-                        <p:selectOneMenu value="#{_bean.editedItem.state.currentState}" converter="stateConvertor"                           
-                                         disabled="#{_bean.isInfoReadOnly()}"
-                                         required="#{param['isRequired'] == 'true'}" 
-                                         requiredMessage="#{bundle.Field} [#{bundle.State}] #{bundle.MustBeFilled}">
-                            <f:selectItems value="#{_bean.getAvailableStates()}" var="state" itemLabel="#{stateBean.getBundleName(state)}" itemValue="#{state}" />                
-                            <p:ajax event="change" listener="#{_bean.onStateChange()}" update="mainFRM" oncomplete="return itemChange = 1;"/>
-                        </p:selectOneMenu>
+                <p:tab title="#{bundle.Object}">
+                    <h:panelGrid columns="2" styleClass="without-spaces" >
+                        <h:panelGrid columns="2" styleClass="without-spaces" > 
+                            <p:outputLabel value="#{bundle.State}:"/>
+                            <p:selectOneMenu value="#{_bean.editedItem.state.currentState}" converter="stateConvertor"                           
+                                             disabled="#{_bean.isInfoReadOnly()}"
+                                             required="#{param['isRequired'] == 'true'}" 
+                                             requiredMessage="#{bundle.Field} [#{bundle.State}] #{bundle.MustBeFilled}">
+                                <f:selectItems value="#{_bean.getAvailableStates()}" var="state" itemLabel="#{stateBean.getBundleName(state)}" itemValue="#{state}" />                
+                                <p:ajax event="change" listener="#{_bean.onStateChange()}" update="mainFRM" oncomplete="return itemChange = 1;"/>
+                            </p:selectOneMenu>
 
-                        <p:outputLabel value="#{bundle.DateCreate}:" />                            
-                        <p:inputText value="#{_bean.editedItem.dateCreate}" readonly="true"
-                                     onkeypress="checkEsc();">
-                            <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
-                        </p:inputText>
+                            <p:outputLabel value="#{bundle.DateCreate}:" />                            
+                            <p:inputText value="#{_bean.editedItem.dateCreate}" readonly="true"
+                                         onkeypress="checkEsc();">
+                                <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
+                            </p:inputText>
 
-                        <p:outputLabel value="#{bundle.DateChange}:" />
-                        <p:inputText value="#{_bean.editedItem.dateChange}" readonly="true"
-                                     onkeypress="checkEsc();">
-                            <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
-                        </p:inputText>
+                            <p:outputLabel value="#{bundle.DateChange}:" />
+                            <p:inputText value="#{_bean.editedItem.dateChange}" readonly="true"
+                                         onkeypress="checkEsc();">
+                                <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
+                            </p:inputText>
 
-                        <p:outputLabel value="#{bundle.Owner}:" />
-                        <ui:include src="/view/common/item-select-list-btn.xhtml" >
-                            <ui:param name="_itemValue" value="#{_bean.editedItem.author}"/>
-                            <ui:param name="_itemLabel" value="fullName"/>
-                            <ui:param name="_required" value="#{true}" />
-                            <ui:param name="_disabled" value="#{_bean.lockChangeOwner()}"/>
-                            <ui:param name="_converter" value="usersConvertor" />
-                            <ui:param name="_itemPanel" value="ownerPanel"/>
-                            <ui:param name="_titleItem" value="#{bundle.Owner}"/>
-                            <ui:param name="_selectorBean" value="#{userBean}"/>
-                            <ui:param name="_items" value="#{userBean.findAll()}"/>
-                            <ui:param name="_actionClear" value="setAuthor"/>
-                            <ui:param name="_actionSelect" value="onChangeOwner"/>
-                            <ui:param name="_update" value=""/>
-                        </ui:include>            
+                            <p:outputLabel value="#{bundle.Owner}:" />
+                            <ui:include src="/view/common/item-select-list-btn.xhtml" >
+                                <ui:param name="_itemValue" value="#{_bean.editedItem.author}"/>
+                                <ui:param name="_itemLabel" value="fullName"/>
+                                <ui:param name="_required" value="#{true}" />
+                                <ui:param name="_disabled" value="#{_bean.lockChangeOwner()}"/>
+                                <ui:param name="_converter" value="usersConvertor" />
+                                <ui:param name="_itemPanel" value="ownerPanel"/>
+                                <ui:param name="_titleItem" value="#{bundle.Owner}"/>
+                                <ui:param name="_selectorBean" value="#{userBean}"/>
+                                <ui:param name="_items" value="#{userBean.findAll()}"/>
+                                <ui:param name="_actionClear" value="setAuthor"/>
+                                <ui:param name="_actionSelect" value="onChangeOwner"/>
+                                <ui:param name="_update" value=""/>
+                            </ui:include>            
 
-                        <p:outputLabel value="Id:" />
-                        <p:inputText value="#{_bean.editedItem.id}" readonly="true"
-                                     styleClass="ui-grid-col-2"
-                                     onkeypress="checkEsc();">
-                        </p:inputText>
+                            <p:outputLabel value="Id:" />
+                            <p:inputText value="#{_bean.editedItem.id}" readonly="true"
+                                         styleClass="ui-grid-col-2"
+                                         onkeypress="checkEsc();">
+                            </p:inputText>
 
-                        <p:selectBooleanCheckbox value="#{_bean.editedItem.actual}" id="cbActual"                                         
-                                                 title="#{_bean.getActualInfo()}"
-                                                 itemLabel="#{bundle.Actual}"
-                                                 disabled="#{_bean.isInfoReadOnly()}">
-                            <p:ajax process="@this" 
-                                    update="cbActual" 
-                                    oncomplete="itemChange = 1;"/>
-                        </p:selectBooleanCheckbox>
-                    </h:panelGrid>
-                </p:tab>            
+                            <p:outputLabel value="#{bundle.Actual}" />
+                            <p:selectBooleanCheckbox value="#{_bean.editedItem.actual}" id="cbActual"                                         
+                                                     title="#{_bean.getActualInfo()}"                                                     
+                                                     disabled="#{_bean.isInfoReadOnly()}">
+                                <p:ajax process="@this" 
+                                        update="cbActual" 
+                                        oncomplete="itemChange = 1;"/>
+                            </p:selectBooleanCheckbox>
+                        </h:panelGrid>
+                        
+                        <h:panelGrid columns="1" styleClass="ui-grid-col-12" >
+                            <p:outputLabel value="#{bundle.BarCode}:"/>                            
+                            <p:commandLink action="#{_bean.onPreViewBarcode()}" styleClass="ui-grid-col-12" >
+                                <p:barcode value="#{_bean.getBarCode()}" type="codabar" styleClass="ui-grid-col-12"/>
+                            </p:commandLink>                          
+                        </h:panelGrid>
+                        
+                    </h:panelGrid>                    
+                </p:tab> 
+                
                 <ui:include src="/view/common/dict-log.xhtml"/> 
                 <ui:include src="/view/common/dict-rights.xhtml" />
+                
                 <ui:insert name="childs_rights"/> 
+                
             </p:accordionPanel>
         </p:panelGrid>
     </p:tab>
